--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="about.html">ABOUT</a>
         <a href="paint.html">PAINT A WALL</a>
         <a href="shop.html">SHOP</a>
-        <a href="">CONTACT</a>
+       
     </div>
 
 
@@ -144,7 +144,10 @@
 
 <div class="footer-basic">
     <footer>
-        <div class="social"><a href="#"><i class="ri-instagram-line"></i></i></a><a href="#"><i class="ri-facebook-circle-line"></i></i></a><a href="#"><i class="ri-twitter-line"></i></a><a href="#"><i class="ri-twitter-line"></i></i></a></div>
+        <div class="social">
+            <a href="#"><i class="ri-instagram-line"></i></i></a>
+            <a href="#"><i class="ri-facebook-circle-line"></i></i></a><a href="#"><i class="ri-twitter-line"></i></a>
+            <a href="#"><i class="ri-instagram-line"></i></i></a></div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="#">Home</a></li>
             <li class="list-inline-item"><a href="#">Services</a></li>
@@ -152,7 +155,7 @@
             <li class="list-inline-item"><a href="#">Terms</a></li>
             <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
         </ul>
-        <p class="copyright">Barvy</p>
+        <p class="copyright">Barmy Community</p>
     </footer>
 
 
