--- a/paint.html
+++ b/paint.html
@@ -10,8 +10,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Alex+Brush&family=Arizonia&family=Arya&family=Inspiration&family=Kalam:wght@300;400;700&family=Lovers+Quarrel&family=Open+Sans:wght@300&family=Poppins:wght@200;300;700&family=Raleway:wght@300&family=Sail&family=Shalimar&family=Tangerine:wght@700&family=WindSong:wght@500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/paint.css">
+
 </head>
 <body>
+  <div class="back">
+    <div class="nav">
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="paint.html">PAINT A WALL</a>
+        <a href="shop.html">SHOP</a>
+    </div>
   <div class="paint">
    
     <div class="centerp">
