--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +19,13 @@
    
 </head>
 <body>
+    <div class="back">
+        <div class="nav">
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="paint.html">PAINT A WALL</a>
+            <a href="shop.html">SHOP</a>
+        </div>
     <div class="shop1">
         <h1>Art Festivals With Our Street Art Community</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta enim sed pariatur cupiditate laborum aperiam magni ducimus sapiente. Obcaecati numquam quisquam amet laboriosam ut. Nostrum dolor dicta impedit! Molestiae, sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, dolores officiis doloribus eaque accusamus mollitia sed iure molestiae fugit reiciendis animi tempora officia tenetur aliquam id aliquid, hic repudiandae quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptatum explicabo vel laboriosam laudantium corrupti corporis nemo ea. Corrupti quidem consequuntur corporis voluptatibus, doloremque reprehenderit officia excepturi ex nisi odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae quis dicta fugit tenetur nobis reprehenderit? Sint, quo, facere tempore cum ab dignissimos doloribus illum facilis, sapiente sit dicta voluptatum nihil!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat laboriosam unde, at quo sapiente odit repellat fuga odio quam consequatur iste deserunt repellendus error aliquid, eaque dolore consectetur eveniet? Eveniet.</p>
