--- a/paint.html
+++ b/paint.html
@@ -94,6 +94,9 @@
   </section>
 </div>
 </div>
+<div class="warning">
+  <h1>For better experience switch to laptop version </h1>
+</div>
 <div class="paint3">
       <div class="marquee">
         <div>Make Your Own graffiti and grab a  chance to get featured on our social media handles.  </div>
